--- a/cryptoparty.html
+++ b/cryptoparty.html
@@ -93,7 +93,7 @@
 			</section>
 			<section>
 				<h2>Weitere Cryptoparties in der Region</h2>
-				<p>Außer uns veranstaltet in der Rhein-Neckar-Region der Chaos Computer Club Mannheim regelmäßige Cryptoparties: <a href="https://www.ccc-mannheim.de/wiki/Cryptoparty">C3MA: Cryptoparty<a></p>
+				<p>Außer uns veranstaltet in der Rhein-Neckar-Region der Chaos Computer Club Mannheim regelmäßige Cryptoparties: <a href="https://www.ccc-mannheim.de/wiki/Cryptoparty">C3MA: Cryptoparty</a></p>
 				<p>In unregelmäßigen Abständen gibt es auch Cryptoparties im <a href="https://raumzeitlabor.de/blog/tag/cryptoparty/">RaumZeitLabor</a>.</p>
 			</section>
 			<footer>
