--- a/cryptoparty.html
+++ b/cryptoparty.html
@@ -73,7 +73,7 @@
 				<h2>Nächste Termine</h2>
 				<p>Mittwoch, 22.10.2014, 18:30 Uhr</p>
 				<p>Montag, 27.10.2014, 18:30 Uhr</p>
-				<p>Ort: Kirchhoff-Insitut für Physik, Im Neuenheimer Feld 227, Heidelberg. Raum wird noch bekannt gegeben.</p>
+				<p>Ort: Kirchhoff-Insitut für Physik, Im Neuenheimer Feld 227, Heidelberg, Raum 3.404.</p>
 			</section>
 			<section>
 				<h2>Was ist eine Cryptoparty?</h2>
