added link to www.noname-ev.de in appropriate section

--- a/cryptoparty.html
+++ b/cryptoparty.html
@@ -85,7 +85,7 @@
 			</section>
 			<section>
 				<h2>Wer seid ihr?</h2>
-				<p>Der NoName ist ein Heidelberger Treff zu computer- und techniknahen Themen aus dem erweiteren Umfeld des Chaos Computer Club. Wir treffen uns jeweils am ersten Donnerstagabend im Monat zu einem Stammtisch in wechselnden Lokalen und an allen anderen Donnerstagen in einem Raum an der Universität.</p>
+				<p>Der <a href="https://www.noname-ev.de">NoName</a> ist ein Heidelberger Treff zu computer- und techniknahen Themen aus dem erweiteren Umfeld des Chaos Computer Club. Wir treffen uns jeweils am ersten Donnerstagabend im Monat zu einem Stammtisch in wechselnden Lokalen und an allen anderen Donnerstagen in einem Raum an der Universität.</p>
 			</section>
 			<section>
 				<h2>Noch Fragen?</h2>
