asking for date for cryptoparty-registration

--- a/cryptoparty.html
+++ b/cryptoparty.html
@@ -81,7 +81,7 @@
 			</section>
 			<section>
 				<h2>Anmeldung</h2>
-				<p>Damit wir vorbereiten und planen können, bitten wir um eine kurze und formlose Anmeldung an <a href="mailto:crypto@noname-ev.de">crypto@noname-ev.de</a> mit der Anzahl der Personen und, wenn Laptops mitgebracht werden, des verwendeten Betriebssystems. Danke!</p>
+				<p>Damit wir vorbereiten und planen können, bitten wir um eine kurze und formlose Anmeldung an <a href="mailto:crypto@noname-ev.de">crypto@noname-ev.de</a> mit der Anzahl der Personen, welcher Termin und, wenn Laptops mitgebracht werden, des verwendeten Betriebssystems. Danke!</p>
 			</section>
 			<section>
 				<h2>Wer seid ihr?</h2>
