Add a first batch of material to the cryptoparty site

--- a/cryptoparty.html
+++ b/cryptoparty.html
@@ -71,9 +71,12 @@
 			</section>
 			<section>
 				<h2>Nächste Termine</h2>
+				<!--
 				<p>Mittwoch, 22.10.2014, 18:30 Uhr</p>
 				<p>Montag, 27.10.2014, 18:30 Uhr</p>
 				<p>Ort: Kirchhoff-Insitut für Physik, Im Neuenheimer Feld 227, Heidelberg, Raum 3.404.</p>
+				-->
+				<p>Nach zwei Terminen im Oktober sind noch keine neuen Termine bekannt, es wird aber definitiv weitere Cryptoparties geben, voraussichtlich im Dezember 2014.</p>
 			</section>
 			<section>
 				<h2>Was ist eine Cryptoparty?</h2>
@@ -96,10 +99,34 @@
 				<p>Außer uns veranstaltet in der Rhein-Neckar-Region der Chaos Computer Club Mannheim regelmäßige Cryptoparties: <a href="https://www.ccc-mannheim.de/wiki/Cryptoparty">C3MA: Cryptoparty</a></p>
 				<p>In unregelmäßigen Abständen gibt es auch Cryptoparties im <a href="https://raumzeitlabor.de/blog/tag/cryptoparty/">RaumZeitLabor</a>.</p>
 			</section>
+			<section>
+				<h2>Material und Links</h2>
+				<p>Unser Material:</p>
+				<ul>
+					<li><a href="https://www.noname-ev.de/wiki/uploads/8/8d/Cryptoparty.pdf">Unsere Folien</a></li>
+				</ul>
+				<p>Software:</p>
+				<ul>
+					<li><a href="https://www.mozilla.org/de/thunderbird/">Mozilla Thunderbird</a></li>
+					<li><a href="https://addons.mozilla.org/de/thunderbird/addon/enigmail/">Enigmail-AddOn für Mozilla Thunderbird</a></li>
+					<li><a href="http://gpg4win.de/download-de.html">GnuPG für Windows</a></li>
+					<li><a href="https://gpgtools.org/">GnuPG für Mac OS X</a></li>
+					<li><a href="http://torproject.org/">Tor Browser</a></li>
+					<li>Browser-AddOns: <a href="https://www.eff.org/https-everywhere">HTTPS Everywhere</a>, <a href="https://www.ghostery.com/de/">Ghostery</a>, <a href="https://disconnect.me/">Disconnect.me</a>, <a href="https://addons.mozilla.org/de/firefox/addon/noscript/">NoScript</a></li>
+				</ul>
+				<p>Weiterführende Links:</p>
+				<ul>
+					<li><a href="https://ssd.eff.org/en/index">Surveillance Self-Defense Guide</a> (englisch)</li>
+					<li><a href="https://prism-break.org/de/">PRISM Break</a> (Liste freier Alternativen für Software)</li>
+					<li><a href="https://thomas-leister.de/allgemein/android-pgp-e-mail-verschluesselung-mit-k9-und-apg">PGP auf Android mit K9Mail und AGP</a></li>
+					<li><a href="http://www.openpgp-schulungen.de/kurzinfo/mime-vs-inline/">Unterschied PGP/MIME und PGP/INLINE</a></li>
+				</ul>
+			</section>
 			<footer>
 				<a href="http://www.noname-ev.de"><img src="/img/cryptoparty/noname.svg" /></a>
 				<p>Eine Veranstaltung des NoName e.V. Heidelberg · <a href="/kontakt.html">Impressum</a></p>
 				<p>Bildnachweis: (CC-by) Electronic Frontier Foundation</p>
+				<p>Alle Angaben ohne Gewähr. Keine Haftung für die Inhalte externer Links.</p>
 			</footer>
 		</div>
 	</body>
