--- a/cryptoparty.html
+++ b/cryptoparty.html
@@ -72,12 +72,12 @@
 			<section>
 				<h2>Nächste Termine</h2>
 				<ul>
-					<li>Di, 26.05.2015, 18:00, Campus Bergheim: Gesprächsrunde zu Datenschutz und Überwachung</li>
-					<li>Mi, 27.05.2015, 18:30, Im Neuenheimer Feld: Cryptoparty mit Schwerpunkt Smartphone-Messenger</li>
-					<li>Mo, 08.06.2015, 18:00, Campus Bergheim: Cryptoparty mit Schwerpunkt Smartphone-Messenger</li>
-					<li>Mi, 17.06.2015, 18:30, Im Neuenheimer Feld: Cryptoparty mit Schwerpunkt E-Mail</li>
-					<li>Mo, 22.06.2015, 18:00, Campus Bergheim: Cryptoparty mit Schwerpunkt E-Mail</li>
-					<li>Mo, 29.06.2015, 18:30, Im Neuenheimer Feld: Cryptoparty mit Schwerpunkt Anonymität</li>
+					<li>Di, 26.05.2015, 18:00, Campus Bergheim<br />Gesprächsrunde zu Datenschutz und Überwachung</li>
+					<li>Mi, 27.05.2015, 18:30, Im Neuenheimer Feld<br />Cryptoparty mit Schwerpunkt Smartphone-Messenger</li>
+					<li>Mo, 08.06.2015, 18:00, Campus Bergheim<br />Cryptoparty mit Schwerpunkt Smartphone-Messenger</li>
+					<li>Mi, 17.06.2015, 18:30, Im Neuenheimer Feld<br />Cryptoparty mit Schwerpunkt E-Mail</li>
+					<li>Mo, 22.06.2015, 18:00, Campus Bergheim<br />Cryptoparty mit Schwerpunkt E-Mail</li>
+					<li>Mo, 29.06.2015, 18:30, Im Neuenheimer Feld<br />Cryptoparty mit Schwerpunkt Anonymität</li>
 				</ul>
 				<p>Die genauen Orte werden rechtzeitig hier bekanntgegeben.</p>
 			</section>
