--- a/cryptoparty.html
+++ b/cryptoparty.html
@@ -72,14 +72,13 @@
 			<section>
 				<h2>Nächste Termine</h2>
 				<ul>
-					<li>Di, 26.05.2015, 18:00, Campus Bergheim<br />Gesprächsrunde zu Datenschutz und Überwachung</li>
-					<li>Mi, 27.05.2015, 18:30, Im Neuenheimer Feld<br />Cryptoparty mit Schwerpunkt Smartphone-Messenger</li>
-					<li>Mo, 08.06.2015, 18:00, Campus Bergheim<br />Cryptoparty mit Schwerpunkt Smartphone-Messenger</li>
-					<li>Mi, 17.06.2015, 18:30, Im Neuenheimer Feld<br />Cryptoparty mit Schwerpunkt E-Mail</li>
-					<li>Mo, 22.06.2015, 18:00, Campus Bergheim<br />Cryptoparty mit Schwerpunkt E-Mail</li>
-					<li>Mo, 29.06.2015, 18:30, Im Neuenheimer Feld<br />Cryptoparty mit Schwerpunkt Anonymität</li>
+					<li>Di, 26.05.2015, 18:00, Bergheimer Straße 58, Raum 02.023<br />Gesprächsrunde zu Datenschutz und Überwachung</li>
+					<li>Mi, 27.05.2015, 18:30, Im Neuenheimer Feld 368, Raum 432<br />Cryptoparty mit Schwerpunkt Smartphone-Messenger</li>
+					<li>Mo, 08.06.2015, 18:00, Bergheimer Straße 58, Raum 02.040<br />Cryptoparty mit Schwerpunkt Smartphone-Messenger</li>
+					<li>Mi, 17.06.2015, 18:30, Im Neuenheimer Feld 368, Raum 432<br />Cryptoparty mit Schwerpunkt E-Mail</li>
+					<li>Mo, 22.06.2015, 18:00, Bergheimer Straße 58, Raum 02.40<br />Cryptoparty mit Schwerpunkt E-Mail</li>
+					<li>Mo, 29.06.2015, 18:30, Im Neuenheimer Feld 368, Raum 432<br />Cryptoparty mit Schwerpunkt Anonymität</li>
 				</ul>
-				<p>Die genauen Orte werden rechtzeitig hier bekanntgegeben.</p>
 			</section>
 			<section>
 				<h2>Was ist eine Cryptoparty?</h2>
