Cryptoparty update WS15/16

--- a/cryptoparty.html
+++ b/cryptoparty.html
@@ -66,18 +66,24 @@
 				<img src="/img/cryptoparty/cryptoparty.svg" />
 			</header>
 			<section>
-				<p>Im letzten Jahr haben wir Sicherheit erhalten, dass mehrere staatliche Institutionen verschiedener Länder den kompletten Internetverkehr überwachen und analysieren. Es drängt sich die Frage auf, wie man seine Daten vor unerlaubtem Zugriff schützen und seine Privatsphäre bewahren kann. Deswegen veranstalten wir sogenannte Cryptopartys, auf denen wir technische Hilfsmittel erklären, mit denen man seine Kommunikation verschlüsseln kann – ohne, dass man ein Computerexperte sein muss.</p>
-				<p>Die Veranstaltungen sind kostenlos und stehen jedem offen, Termine werden auf dieser Seite angekündigt, um Anmeldung wird gebeten (siehe unten).</p>
+				<p>In den letzten Jahren haben wir Sicherheit erhalten, dass mehrere staatliche Institutionen verschiedener Länder den kompletten Internetverkehr überwachen und analysieren. Es drängt sich die Frage auf, wie man seine Daten vor unerlaubtem Zugriff schützen und seine Privatsphäre bewahren kann. Deswegen veranstalten wir sogenannte Cryptopartys, auf denen wir technische Hilfsmittel erklären, mit denen man seine Kommunikation verschlüsseln kann – ohne, dass man ein Computerexperte sein muss.</p>
+				<p>Die Veranstaltungen sind kostenlos und stehen jedem offen, Termine werden auf dieser Seite angekündigt, um Anmeldung bei den Workshops wird gebeten (siehe unten).</p>
 			</section>
 			<section>
-				<h2>Nächste Termine</h2>
+				<h2>Termine WS 2015/16</h2>
 				<ul>
-					<li>Di, 26.05.2015, 18:30, Bergheimer Straße 58, Raum 02.023<br />Gesprächsrunde zu Datenschutz und Überwachung</li>
-					<li>Mi, 27.05.2015, 18:30, Im Neuenheimer Feld 368, Raum 432<br />Cryptoparty mit Schwerpunkt Smartphone-Messenger</li>
-					<li>Mo, 08.06.2015, 18:30, Bergheimer Straße 58, Raum 02.040<br />Cryptoparty mit Schwerpunkt Smartphone-Messenger</li>
-					<li>Mi, 17.06.2015, 18:30, Im Neuenheimer Feld 368, Raum 432<br />Cryptoparty mit Schwerpunkt E-Mail</li>
-					<li>Mo, 22.06.2015, 18:30, Bergheimer Straße 58, Raum 02.40<br />Cryptoparty mit Schwerpunkt E-Mail</li>
-					<li>Mo, 29.06.2015, 18:30, Im Neuenheimer Feld 368, Raum 432<br />Cryptoparty mit Schwerpunkt Anonymität</li>
+					<li>Di, 03.11.2015, 18:30, Hauptstraße 47-51, Übungsraum B<br />
+						Wie funktioniert das Internet? Technische Hintergründe für Nicht-Techniker</li>
+					<li>Di, 10.11.2015, 18:30, Bergheimer Straße 58, Raum 01.034<br />
+						Gesprächsrunde: Was sind meine Daten wert?</li>
+					<li>Di, 24.11.2015, 18:30, Im Neuenheimer Feld 368, Raum 432<br />
+						Workshop: E-Mail-Verschlüsselung</li>
+					<li>Mi, 02.12.2015, <strong>18:00</strong>, Hauptstraße 47-51, Übungsraum B<br />
+						Workshop: E-Mail-Verschlüsselung</li>
+					<li>Mi, 09.12.2015, 18:30, Im Neuenheimer Feld 368, Raum 432<br />
+						Workshop: Smartphone-Messenger</li>
+					<li>Di, 12.01.2016, 18:30, Bergheimer Straße 58, Raum 01.034<br />
+						Workshop: Anonymität online</li>
 				</ul>
 			</section>
 			<section>
@@ -91,7 +97,7 @@
 			<section>
 				<h2>Wer seid ihr?</h2>
 				<p>Der <a href="https://www.noname-ev.de">NoName</a> ist ein Heidelberger Treff zu computer- und techniknahen Themen aus dem erweiteren Umfeld des Chaos Computer Club. Wir treffen uns jeweils am ersten Donnerstagabend im Monat zu einem Stammtisch in wechselnden Lokalen und an allen anderen Donnerstagen in einem Raum an der Universität.</p>
-				<p>Bei der Durchführung unterstützen uns dieses Jahr freundlicherweise die <a href="http://www.mathcomp.uni-heidelberg.de/">HGS MathComp</a> und die <a href="https://www.uni-heidelberg.de/politikwissenschaften/forschung/netzpolitik/ag/index.html">AG Netzpolitik</a> der Universität Heidelberg. Vielen Dank!</p>
+				<p>Bei der Durchführung unterstützen uns dieses Jahr freundlicherweise die <a href="http://www.mathcomp.uni-heidelberg.de/">HGS MathComp</a>, die <a href="https://www.uni-heidelberg.de/politikwissenschaften/forschung/netzpolitik/ag/index.html">AG Netzpolitik</a> sowie das <a href="http://www.psychologie.uni-heidelberg.de/">Psychologische Institut</a> der Universität Heidelberg. Vielen Dank!</p>
 			</section>
 			<section>
 				<h2>Noch Fragen?</h2>
@@ -106,7 +112,7 @@
 				<h2>Material und Links</h2>
 				<p>Unser Material:</p>
 				<ul>
-					<li><a href="https://www.noname-ev.de/wiki/uploads/8/8d/Cryptoparty.pdf">Unsere Folien zu E-Mail-Verschlüsselung und Tor</a></li>
+					<li><a href="https://www.noname-ev.de/wiki/uploads/8/8d/Cryptoparty.pdf">Unsere Folien zu E-Mail-Verschlüsselung und Tor (2014)</a></li>
 				</ul>
 				<p>Software:</p>
 				<ul>
