Neue Cryptoparty Termine

--- a/cryptoparty.html
+++ b/cryptoparty.html
@@ -70,20 +70,20 @@
 				<p>Die Veranstaltungen sind kostenlos und stehen jedem offen, Termine werden auf dieser Seite angekündigt, um Anmeldung bei den Workshops wird gebeten (siehe unten).</p>
 			</section>
 			<section>
-				<h2>Termine WS 2015/16</h2>
+				<h2>Termine SoSe 2016</h2>
 				<ul>
-					<li>Di, 03.11.2015, 18:30, Hauptstraße 47-51, Übungsraum B<br />
-						Wie funktioniert das Internet? Technische Hintergründe für Nicht-Techniker</li>
-					<li>Di, 10.11.2015, 18:30, Bergheimer Straße 58, Raum 01.034<br />
-						Gesprächsrunde: Was sind meine Daten wert?</li>
-					<li>Di, 24.11.2015, 18:30, Im Neuenheimer Feld 368, Raum 432<br />
+					<li>Mi, 11.05.2016, 18:30, Bergheimer Straße 58, Raum 02.034<br/>
+						Erpressungstrojaner – Technische Hintergründe für Nicht-Techniker</li>
+					<li>Mi, 18.05.2016, 18:30, Hauptstraße 47-51, Übungsraum B<br />
+						Gesprächsrunde „Cryptowars“</li>
+					<li>Di, 24.05.2016, 18:30, Mathematikon, INF 205, Raum 5/104<br />
 						Workshop: E-Mail-Verschlüsselung</li>
-					<li>Mi, 02.12.2015, <strong>18:00</strong>, Hauptstraße 47-51, Übungsraum B<br />
+					<li>Mo, 30.05.2016, 18:30, Bergheimer Straße 58, Raum 01.034<br />
 						Workshop: E-Mail-Verschlüsselung</li>
-					<li>Mi, 09.12.2015, 18:30, Im Neuenheimer Feld 368, Raum 432<br />
-						Workshop: Smartphone-Messenger</li>
-					<li>Di, 12.01.2016, 18:30, Bergheimer Straße 58, Raum 01.034<br />
+					<li>Di, 07.06.2016, 18:30, Hauptstraße 47-51, Übungsraum B<br />
 						Workshop: Anonymität online</li>
+					<li>Mi, 22.06.2016, 18:30, Mathematikon, INF 205, Raum 5/104<br />
+						Cryptoparty für Forgeschrittene. Schonmal dagewesen und weiter neugierig? Hier bist du richtig!</li>
 				</ul>
 			</section>
 			<section>
@@ -92,7 +92,7 @@
 			</section>
 			<section>
 				<h2>Anmeldung</h2>
-				<p>Damit wir vorbereiten und planen können, bitten wir um eine kurze und formlose Anmeldung an <a href="mailto:crypto@noname-ev.de">crypto@noname-ev.de</a> mit der Anzahl der Personen, welcher Termin und, wenn Laptops mitgebracht werden, des verwendeten Betriebssystems. Danke!</p>
+				<p>Damit wir vorbereiten und planen können, bitten wir bei den Workshops um eine kurze und formlose Anmeldung an <a href="mailto:crypto@noname-ev.de">crypto@noname-ev.de</a> mit der Anzahl der Personen, welcher Termin und, wenn Laptops mitgebracht werden, des verwendeten Betriebssystems. Danke!</p>
 			</section>
 			<section>
 				<h2>Wer seid ihr?</h2>
