"Technik für Nichttechniker" added to cryptoparty website

--- a/www/cryptoparty.html
+++ b/www/cryptoparty.html
@@ -73,7 +73,7 @@
 				<h2>Termine WS 2016/17</h2>
 				<ul>
 					<li>Di, 08.11.2016, 18:30, Hauptstraße 47-51, Übungsraum C<br/>
-						Big Toaster is watching you!</li>
+						Technik für Nichttechniker: Big Toaster is watching you!</li>
 					<li>Mo, 14.11.2016, 18:30, Mathematikon INF 205, Raum 5/104<br />
 						Workshop: Anonymität online</li>
 					<li>Di, 15.11.2016, 18:30, Hauptstraße 47-51, Übungsraum C<br />
