add OpenStreetMap-Markers for locations

--- a/www/cryptoparty.html
+++ b/www/cryptoparty.html
@@ -72,17 +72,17 @@
 			<section>
 				<h2>Termine WS 2016/17</h2>
 				<ul>
-					<li>Di, 08.11.2016, 18:30, Hauptstraße 47-51, Übungsraum C<br/>
+					<li>Di, 08.11.2016, 18:30, <a href="http://www.openstreetmap.org/?mlat=49.41141&mlon=8.69836#map=18/49.41141/8.69836">Hauptstraße 47-51, Übungsraum C</a><br/>
 						Technik für Nichttechniker: Big Toaster is watching you!</li>
-					<li>Mo, 14.11.2016, 18:30, Mathematikon INF 205, Raum 5/104<br />
+					<li>Mo, 14.11.2016, 18:30, <a href="http://www.openstreetmap.org/?mlat=49.41729&mlon=8.67550#map=18/49.41729/8.67550">Mathematikon INF 205, Raum 5/104</a><br />
 						Workshop: Anonymität online</li>
-					<li>Di, 15.11.2016, 18:30, Hauptstraße 47-51, Übungsraum C<br />
+					<li>Di, 15.11.2016, 18:30, <a href="http://www.openstreetmap.org/?mlat=49.41141&mlon=8.69836#map=18/49.41141/8.69836">Hauptstraße 47-51, Übungsraum C</a><br />
 						Workshop: E-Mail-Verschlüsselung</li>
-					<li>Mi, 23.11.2016, 18:30, Mathematikon INF 205, Raum 5/104<br />
+					<li>Mi, 23.11.2016, 18:30, <a href="http://www.openstreetmap.org/?mlat=49.41729&mlon=8.67550#map=18/49.41729/8.67550">Mathematikon INF 205, Raum 5/104</a><br />
 						Workshop: E-Mail-Verschlüsselung</li>
-					<li>Di, 29.11.2016, 18:30, Bergheimer Straße 58, Raum 03.046<br />
+					<li>Di, 29.11.2016, 18:30, <a href="http://www.openstreetmap.org/?mlat=49.40852&mlon=8.68427#map=19/49.40852/8.68427">Bergheimer Straße 58, Raum 03.046</a><br />
 						Cryptoparty für Forgeschrittene. Schonmal dagewesen und weiter neugierig? Hier bist du richtig!</li>
-					<li>Di, 13.12.2016, 18:30, Mathematikon, INF 205, Raum 5/104<br />
+					<li>Di, 13.12.2016, 18:30, <a href="http://www.openstreetmap.org/?mlat=49.41729&mlon=8.67550#map=18/49.41729/8.67550">Mathematikon, INF 205, Raum 5/104</a><br />
 						Diskussionsrunde „Das Internet der Dinge — das Ende der Privatsphäre?“</li>
 				</ul>
 			</section>
