make spacing termine-only

--- a/www/cryptoparty.html
+++ b/www/cryptoparty.html
@@ -55,7 +55,7 @@
 			a:hover {
 				color: #ffffff;
 			}
-			li {
+			.termine {
 			    margin-bottom: 1em;
 			}
 		</style>
@@ -74,7 +74,7 @@
 			</section>
 			<section>
 				<h2>Termine WS 2016/17</h2>
-				<ul>
+				<ul class="termine">
 					<li>Di, 08.11.2016, 18:30, <a href="http://www.openstreetmap.org/?mlat=49.41141&mlon=8.69836#map=18/49.41141/8.69836">Hauptstraße 47-51, Übungsraum C</a><br/>
 						Technik für Nichttechniker: Big Toaster is watching you!</li>
 					<li>Mo, 14.11.2016, 18:30, <a href="http://www.openstreetmap.org/?mlat=49.41729&mlon=8.67550#map=18/49.41729/8.67550">Mathematikon INF 205, Raum 5/104</a><br />
