drop remainers of Anmeldungsbitte

--- a/www/cryptoparty.html
+++ b/www/cryptoparty.html
@@ -70,7 +70,7 @@
 			</header>
 			<section>
 				<p>In den letzten Jahren haben wir Sicherheit erhalten, dass mehrere staatliche Institutionen verschiedener Länder den kompletten Internetverkehr überwachen und analysieren. Es drängt sich die Frage auf, wie man seine Daten vor unerlaubtem Zugriff schützen und seine Privatsphäre bewahren kann. Deswegen veranstalten wir sogenannte Cryptopartys, auf denen wir technische Hilfsmittel erklären, mit denen man seine Kommunikation verschlüsseln kann – ohne, dass man ein Computerexperte sein muss.</p>
-				<p>Die Veranstaltungen sind kostenlos und stehen jedem offen, Termine werden auf dieser Seite angekündigt, um Anmeldung bei den Workshops wird gebeten (siehe unten).</p>
+				<p>Die Veranstaltungen sind kostenlos und stehen jedem offen, Termine werden auf dieser Seite angekündigt.</p>
 			</section>
 			<section>
 				<h2>Termine WS 2016/17</h2>
