clean up sources according to current recommendations

--- a/www/cryptoparty.html
+++ b/www/cryptoparty.html
@@ -120,14 +120,12 @@
 					<li><a href="http://gpg4win.de/download-de.html">GnuPG für Windows</a></li>
 					<li><a href="https://gpgtools.org/">GnuPG für Mac OS X</a></li>
 					<li><a href="http://torproject.org/">Tor Browser</a></li>
-					<li>Browser-AddOns: <a href="https://www.eff.org/https-everywhere">HTTPS Everywhere</a>, <a href="https://www.ghostery.com/de/">Ghostery</a>, <a href="https://disconnect.me/">Disconnect.me</a>, <a href="https://addons.mozilla.org/de/firefox/addon/noscript/">NoScript</a></li>
+					<li>Browser-AddOns: <a href="https://www.eff.org/https-everywhere">HTTPS Everywhere</a>, <a href="https://www.eff.org/privacybadger">PrivacyBadger</a>, <a href="https://addons.mozilla.org/en-US/firefox/addon/self-destructing-cookies/">Self Destructing Cookies</a>, <a href="https://github.com/gorhill/uBlock">uBlock Origin</a></li>
 				</ul>
 				<p>Weiterführende Links:</p>
 				<ul>
 					<li><a href="https://ssd.eff.org/en/index">Surveillance Self-Defense Guide</a> (englisch)</li>
 					<li><a href="https://prism-break.org/de/">PRISM Break</a> (Liste freier Alternativen für Software)</li>
-					<li><a href="https://thomas-leister.de/allgemein/android-pgp-e-mail-verschluesselung-mit-k9-und-apg">PGP auf Android mit K9Mail und AGP</a></li>
-					<li><a href="http://www.openpgp-schulungen.de/kurzinfo/mime-vs-inline/">Unterschied PGP/MIME und PGP/INLINE</a></li>
 				</ul>
 			</section>
 			<footer>
